2011-03-13 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GNUmakefile: Remove redundant fixup for atomic
	operations linkage errors on 32bit intel platforms.

2011-02-28 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Import a lot of autoconf stuff to detect whether
	we need to link libgcc for atomic operations.
	* config.make.in: Add flags for atomic operations.
	* aclocal.m4
	* configure:
	Regenerate
	* m4/*
	* config.guess
	* config.sub
	* ltmain.sh
	* libtool
	* install-sh:
	Add libtool/autconf related file.

	Fixes to link libgcc for atomic operations when needed.

2011-02-28 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GNUmakefile: Attempt to fix linkage errors for 32bit
	intel platforms.

2011-02-27 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/DBusKit.gsdoc: Documentation improvement.
	* Headers/DKProxy.h
	* Source/DKProxy.m:
	Document bus-state notifications. Turn strings for notification
	names into globals. 
	* Source/DKEndpointManager.m: Move thread starting code to the
	correct place.

2011-02-22 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/announce.0.1.texi: Add draft release
	announcement for 0.1.
	* Documentation/GNUmakefile: Add rules for ANNOUNCE
	* GNUmakefile.preamble
	* Source/GNUmakefile:
	Move version number to the top level.

2011-02-22 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProxy.m: Fixed bug with method cache generation in
	the single-threaded case.

2011-02-22 Niels Grewe <niels.grewe@halbordnung.de>

	* GNUmakefile: Add packaging metadata.

2011-02-22 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/UsingDBus.texi: Document failure recovery
	procedures.

2011-02-22 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKEndpoint.m: Fix over-release bug where we didn't take
	into account the fact that libdbus also takes ownership for the
	context objects.
	* Source/DKProxy.m: Let DKDBus objects trigger the state sync